Lowercase some ugly parameters
